/*
 *  UCF COP3330 Summer 2021 Assignment 3 Solution
 *  Copyright 2021 Isaac Liljeros
 */

package ex44;

public class Product {
        public String name;
        public double price;
        int quantity;
}
