@startuml
'https://plantuml.com/class-diagram

class App {
    {static} +main()
}

class ProductSearch {
    -ProductList productList
    -void populateProductListFromJson()
    -String getFileContentsAsString()
    +String queryStock(String query)
}

class ProductList {
    + Product[] products
}

class Product {
    +String name
    +double price
    +int quantity
}

App *-- ProductSearch
ProductSearch *-- ProductList
ProductList *- Product

@enduml